# cgo_icu4x_segmenter

./: README.md  ffi.go  go.mod  segmenter.go  segmenter_test.go
segmenter/: Cargo.toml  build.rs
segmenter/src/: lib.rs  segment.rs
