[package]
name = "segmenter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icu = { version = "1.0.0", features = ["experimental"] }
icu_testdata = { version = "1.0.0", features = ["icu_segmenter"] }
aho-corasick = "0.7"
lazy_static = "1"

[features]
default = ["word", "sentence"]
word = []
sentence = []

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.23"

[profile.release]
opt-level = 'z'
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
rpath = false
strip = true
panic = 'abort'